fixed about page layout issue and added shadows to buttons throughout

--- a/src/components/main_navigation/NavDropdownMenu.module.css
+++ b/src/components/main_navigation/NavDropdownMenu.module.css
@@ -6,16 +6,18 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0px 1px 3px 0px;
+    outline: 3px solid black;
+    border-radius: 8px;
 }
 
-.nav-item-active{
+.nav-item-active {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style-type: none;
-    padding: 2px;
+    padding: 8px;
     background-color: white;
-    border-bottom: 1px solid rgba(29, 28, 28, 0.5);
+    /* border-bottom: 4px solid rgba(29, 28, 28, 0.5); */
     cursor: pointer;
 }
 
