--- a/src/routes/about/AboutPage.module.css
+++ b/src/routes/about/AboutPage.module.css
@@ -14,7 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     z-index: 1;
-    width: 100%;
+    /* width: 100%; */
     position: relative;
     margin: 60px 0;
 }
@@ -50,19 +50,21 @@ body {
 
 .hero-image img {
     width: 100%;
-    border-radius: 8px; /* Rounded corners for images */
+    border-radius: 8px; 
 }
 
 .about-page-section {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    width: 100%;
+    /* width: 100%; */
     margin: 20px;
-    align-items: center; /* Align items vertically */
+    align-items: center;
 }
 
 .about-page-section img {
+    width: 100%;
+    height: auto;
     max-width: 600px;
     max-height: 400px;
     border-radius: 8px;
