--- a/src/routes/products/ProductDetailsPage.module.css
+++ b/src/routes/products/ProductDetailsPage.module.css
@@ -15,6 +15,10 @@
     margin-top: 100px;
 }
 
+.product-details-container > h1{
+    margin: 10px;
+}
+
 .products-container {
     display: flex;
     flex-wrap: wrap;
@@ -36,6 +40,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.checkout-items-positioning > button {
+    box-shadow: 0px 0px 1px 1px;
+    padding: 5px;
+}
+
+.checkout-items-positioning > button:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .checkout-items-positioning-wishlist {
