--- a/src/routes/products/ProductPage.module.css
+++ b/src/routes/products/ProductPage.module.css
@@ -7,6 +7,7 @@
 .page-container {
     display: flex;
     min-height: 100vh;
+    justify-content: center;
 }
 
 .products-container {
@@ -33,6 +34,7 @@
 .filters-dropdown > button {
     height: 40px;
     position: fixed;
+    box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .search-container {
@@ -55,7 +57,7 @@
     background-color: white; 
     position: fixed;
     top: 150px;
-    margin-left: 10px;
+    margin-left: 40px;
 }
 
 .label {
@@ -81,6 +83,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 8px;
 }
 
 .filters-title {
